2008-02-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvbbin.py:
	Remove old unused experimental code.

2008-02-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/admin_gtk.py:
	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Split of DVB Producer into 3 components:
	dvb-ts-producer (just captures and outputs a ts)
	mpeg-ts-splitter (takes a ts and outputs a ts relevant for a
	                  certain program)
	mpeg-ts-decoder (demuxes and decodes a ts into raw video and audio)
	Orginal dvb-producer still exists. Components refactored so common
	code is shared.

2008-02-27  Michael Smith <msmith@fluendo.com>

	* flumotion/component/dvb/dvb.xml:
	  Bundle more code properly.

2007-10-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Move to using dvbbasebin instead of dvbsrc.
	No longer required to specify pids property, just program
	number is required.
	This gives hardware CAM support for free,

2007-10-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Fix device paramter construction if old dvbsrc used with
	no device specified and adapter specified instead.

2007-10-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	Adjust for API changes and fix up one template.

2007-10-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	remove duplicate code-rate-hp in xml

2007-10-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Make code-rate-hp both DVB-T and DVB-S. Bring back old
	device property to allow backwards compatibility for configs.
	Handle old dvbsrc and new dvbsrc properly.
	Set code-rate-hp with DVB-S when specified (needed for 
	working diseq).
